crates/alder-parse/src/snapshots/alder_parse__query__tests__error_verb_empty.snap
---
source: crates/alder-parse/src/query.rs
description: "query { }"
---
Query(
    Verb(
        1,
        9,
    ),
    1,
    1,
)
