crates/alder-parse/src/snapshots/alder_parse__query__tests__error_where_expr.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select * from users where }"
---
Query(
    Select(
        Where(
            Start(
                1,
                35,
            ),
            1,
            35,
        ),
        1,
        9,
    ),
    1,
    1,
)
