crates/alder-parse/src/snapshots/alder_parse__query__tests__select_fields.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select { u.name, u.email } from users as u }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 53,
        },
    },
    value: Query(
        Select(
            Select {
                projection: Fields(
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 18,
                                },
                                end: Position {
                                    line: 1,
                                    column: 24,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 18,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 19,
                                        },
                                    },
                                    value: Var(
                                        "u",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 20,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 24,
                                        },
                                    },
                                    value: "name",
                                },
                            },
                        },
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 26,
                                },
                                end: Position {
                                    line: 1,
                                    column: 33,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 26,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 27,
                                        },
                                    },
                                    value: Var(
                                        "u",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 28,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 33,
                                        },
                                    },
                                    value: "email",
                                },
                            },
                        },
                    ],
                ),
                from: TableRef {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 41,
                            },
                            end: Position {
                                line: 1,
                                column: 46,
                            },
                        },
                        value: "users",
                    },
                    alias: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 50,
                                },
                                end: Position {
                                    line: 1,
                                    column: 51,
                                },
                            },
                            value: "u",
                        },
                    ),
                },
                joins: [],
                where_: None,
                group_by: [],
                order_by: [],
                limit: None,
                offset: None,
            },
        ),
    ),
}
