crates/alder-parse/src/snapshots/alder_parse__query__tests__select_group_by.snap
---
source: crates/alder-parse/src/query.rs
description: "query { select { p.author } from posts as p groupBy p.author }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 63,
        },
    },
    value: Query(
        Select(
            Select {
                projection: Fields(
                    [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 18,
                                },
                                end: Position {
                                    line: 1,
                                    column: 26,
                                },
                            },
                            value: Access {
                                record: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 18,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 19,
                                        },
                                    },
                                    value: Var(
                                        "p",
                                    ),
                                },
                                field: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 20,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 26,
                                        },
                                    },
                                    value: "author",
                                },
                            },
                        },
                    ],
                ),
                from: TableRef {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 34,
                            },
                            end: Position {
                                line: 1,
                                column: 39,
                            },
                        },
                        value: "posts",
                    },
                    alias: Some(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 43,
                                },
                                end: Position {
                                    line: 1,
                                    column: 44,
                                },
                            },
                            value: "p",
                        },
                    ),
                },
                joins: [],
                where_: None,
                group_by: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 53,
                            },
                            end: Position {
                                line: 1,
                                column: 61,
                            },
                        },
                        value: Access {
                            record: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 53,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 54,
                                    },
                                },
                                value: Var(
                                    "p",
                                ),
                            },
                            field: Located {
                                region: Region {
                                    start: Position {
                                        line: 1,
                                        column: 55,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 61,
                                    },
                                },
                                value: "author",
                            },
                        },
                    },
                ],
                order_by: [],
                limit: None,
                offset: None,
            },
        ),
    ),
}
